Removed Multiple Choice Containers. SelectorContainer is new and better version of those containers. Also new AutocompletionTextField and minor improvements.